Fix RequestContextTest